feat: send staging secure token
