# apps/api/src/http/routes/__sandbox/generate-opt-code.ts
@@ -1,5 +1,6 @@
 import { z } from 'zod'
 
+import { verifyStagingToken } from '@/http/middlewares/verify-staging-token'
 import dayjs from '@/lib/day-js'
 import { prisma } from '@/lib/prisma'
 import { FastifyTypedInstance } from '@/types/fastify'
@@ -9,15 +10,21 @@ const bodySchema = z.object({
   email: z.string().email(),
 })
 
+const headerSchema = z.object({
+  'x-staging-token': z.string(),
+})
+
 export async function generateOptCode(app: FastifyTypedInstance) {
   app.post(
     '/sandbox/generate-opt-code',
     {
+      onRequest: [verifyStagingToken],
       schema: {
         operationId: 'generateOptCode',
         tags: ['Sandbox'],
         summary: 'Generate OPT code',
         body: bodySchema,
+        headers: headerSchema,
         response: {
           200: z.object({
             code: z.string(),
